--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -573,6 +573,11 @@ elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO_LINKBIT)
+    set(BOARD_TYPE "fogseek-audio-linkbit")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO_MOODLIGHT)
     set(BOARD_TYPE "fogseek-audio-moodlight")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
@@ -593,8 +598,13 @@ elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_BUBBLEPAL)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_ES8389)
-    set(BOARD_TYPE "fogseek-edge-es8389")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_ES8389_4G)
+    set(BOARD_TYPE "fogseek-edge-es8389-4g")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
+    set(BUILTIN_ICON_FONT font_awesome_20_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_ES8389_WIFI)
+    set(BOARD_TYPE "fogseek-edge-es8389-wifi")
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
