--- a/main/boards/fogseek-audio-linkbit/config.json
+++ b/main/boards/fogseek-audio-linkbit/config.json
@@ -2,9 +2,9 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "fogseek-audio",
+            "name": "fogseek-audio-linkbit",
             "sdkconfig_append": [
-                "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y"
+                "CONFIG_SR_WN_WN9_XIAOTEXIAOTE_TTS2=y"
             ]
         }
     ]
