--- a/main/boards/fogseek-edge-es8389-wifi/config.json
+++ b/main/boards/fogseek-edge-es8389-wifi/config.json
@@ -2,9 +2,9 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "fogseek-edge-es8389",
+            "name": "fogseek-edge-es8389-wifi",
             "sdkconfig_append": [
-                "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y"
+                "CONFIG_USE_DEVICE_AEC=y"
             ]
         }
     ]
